# hold-my-beer

./: .continue-here.md  .gitignore  README.md  bump_crate.sh  landing-page.html
.github/workflows/: rust.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
collab-cli/: Cargo.toml  README.md
collab-cli/src/: client.rs  init.rs  lib.rs  lifecycle.rs  main.rs  monitor.rs  team.rs  team_cli.rs  team_init.rs  worker.rs
collab-cli/tests/: cli_ux_e2e.rs  e2e_team.rs  migration_e2e.rs  worker_stdio_isolation.rs
collab-gui/: inline-css.mjs  package-lock.json  package.json
collab-gui/public/: app-panels.css  app-panels.js  app-panels.min.css  app-panels.min.js  app.css  app.js  app.min.css  app.min.js  index.html
collab-gui/src-tauri/: tauri.conf.json
collab-gui/tests/: design-smoke.spec.mjs  lighthouse.spec.mjs
collab-server/: Cargo.toml
collab-server/src/: db.rs  lib.rs  main.rs
collab-vscode/: SPEC.md  package-lock.json  package.json
collab-vscode/src/: api.ts  chat.ts  commands.ts  config.ts  extension.ts  notifications.ts  roster.ts  sse.ts
collab-web/: index.html
ios/CollabClient/: project.yml
ios/CollabClient/CollabClient.xcodeproj/: project.pbxproj
ios/CollabClient/CollabClient.xcodeproj/project.xcworkspace/xcuserdata/michael.xcuserdatad/: UserInterfaceState.xcuserstate
ios/CollabClient/CollabClient.xcodeproj/xcshareddata/xcschemes/: CollabClient.xcscheme
ios/CollabClient/Sources/CollabClient/: CollabClientApp.swift  Info.plist
ios/CollabClient/Sources/CollabClient/Models/: AppConfig.swift  Message.swift  Metrics.swift  Todo.swift  Worker.swift
ios/CollabClient/Sources/CollabClient/Services/: CollabAPI.swift  SSEService.swift
ios/CollabClient/Sources/CollabClient/ViewModels/: AppViewModel.swift
ios/CollabClient/Sources/CollabClient/Views/: ComposeView.swift  DashboardView.swift  MessageBubble.swift  RosterView.swift  SetupView.swift  TodosView.swift  UsageView.swift
tools/: llama-web  llama-web.ps1  ollama-web
