[package]
name = "collab"
version = "0.1.0"
edition = "2021"
authors = ["Claude IPC Contributors"]
description = "CLI tool for inter-instance communication between Claude Code workers"

[[bin]]
name = "collab"
path = "src/main.rs"

[features]
default = ["monitor"]
monitor = ["ratatui", "crossterm", "textual-rs"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
textual-rs = { version = "0.3.9", optional = true }
