[package]
name = "holdmybeer-cli"
version = "0.3.4"
edition = "2024"
authors = ["jabberwock"]
description = "Hold My Beer's API server for inter-process communication between AI agents."
license-file = "LICENSE"

[[bin]]
name = "collab"
path = "src/main.rs"

[features]
default = []
monitor = ["ratatui", "crossterm", "textual-rs"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
libc = "0.2"
serde_yaml = "0.9"
regex = "1.10"
shlex = "1"
async-trait = "0.1"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
textual-rs = { version = "0.3.11", optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
holdmybeer-server = { path = "../collab-server" }
axum = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
