[package]
name = "holdmybeer-server"
version = "0.3.4"
edition = "2024"
authors = ["jabberwock"]
description = "Hold My Beer's API server for inter-process communication between AI agents."
license-file = "LICENSE"

[[bin]]
name = "collab-server"
path = "src/main.rs"

[lib]
name = "collab_server"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout"] }
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
http-body-util = "0.1"
